--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "private": true,
   "scripts": {
     "client": "vue-cli-service serve",
-    "server": "go run api/server.go",
+    "server": "nodemon api/_server.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9",
+    "util": "^0.12.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
